# bio-firewall

./: .dockerignore  .gitignore  .zenodo.json  CITATION.cff  DATA_LICENSES.md  Dockerfile  LICENSE  Makefile  README.md  REPRODUCTION.md  locus_mouse_outcome_validation.py  pyproject.toml
bio_firewall/: __init__.py  data.py
docs/: BENCHMARK.md  HAZARD_KB.md  HAZARD_TAXONOMY.md  HEADTOHEAD.md  PANEL.md  STANDARDS.md  SYSTEM_CARD.md  THREAT_MODEL.md  integration_cloudlab.md
examples/: agent_integration.py  agent_trace.json  demo.py
prereg/: ws_biofirewall.yaml  ws_cloudlab_gate.yaml  ws_locus_mouse_outcome.yaml  ws_pin.yaml  ws_verify_reconcile.yaml  ws_writespec.yaml
results/: locus_mouse_outcome.json  locus_mouse_outcome_all.json  locus_outcome_visdb.json
standards/: nist_benchmark_export.json
tests/: conftest.py  test_acceptance_extended.py  test_access.py  test_cargo_bench.py  test_cargo_decorr.py  test_cloudlab_gate.py  test_combine_mono.py  test_conformal.py  test_conformal_np.py  test_data_licenses.py  test_edit_mech.py  test_full.py  test_graded.py  test_hazard_bench.py  test_headtohead.py  test_headtohead_replay.py  test_input_robustness.py  test_integrate.py  test_kb.py  test_locus_mouse_outcome.py  test_locus_outcome.py  test_locus_pos.py  test_phase15.py  test_reconcile.py  test_second_adapter.py  test_session.py  test_spine.py  test_standards.py  test_struct_channel.py  test_struct_gated.py  test_writespec.py
tools/: build_hazard_kb.py  export_nist_benchmark.py
vendored_data/: cargo_centroids.npz  gnomad_constraint.parquet  locus_genes.parquet  (+2 more)
(+86 files in other folders)
